--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@next/mdx": "^15.3.1",
     "@types/mdx": "^2.0.13",
     "gray-matter": "^4.0.3",
+    "mixpanel": "^0.18.1",
     "next": "15.3.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
