--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,6 +22,14 @@
       "@/*": ["./src/*"]
     }
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts", "src/app/blog/hello/page.mdx", "src/app/blog/driving-team-autonomy/page.mdx"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "src/app/blog/hello/page.mdx",
+    "src/app/blog/driving-team-autonomy/page.mdx",
+    "src/app/about/page.mdx"
+  ],
   "exclude": ["node_modules"]
 }
