--- a/package.json
+++ b/package.json
@@ -21,10 +21,9 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "rehype-highlight": "^7.0.2",
-    "rehype-stringify": "^10.0.1",
     "remark": "^15.0.1",
     "remark-gfm": "^4.0.1",
-    "remark-html": "^16.0.1",
+    "remark-mdx": "^3.1.0",
     "remark-rehype": "^11.1.2",
     "sugar-high": "^0.9.3"
   },
